--- a/agnecy.html
+++ b/agnecy.html
@@ -99,6 +99,8 @@
                             <h1><b>MEET OUR TEAM</b></h1>
                             <h6>Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
                         </div>
+                        <div class="col-3">
+                        </div>
                     </div>
                 </div>
                 <div class="foto">
