--- a/agnecy.html
+++ b/agnecy.html
@@ -117,11 +117,11 @@
         </section>
         <section class="subscribe">
             <div class="container">
-                <div class="col-2">
-
-                </div>
-                <div class="col-4">
-
+                <div class="subtop">
+                    <div class="col-1">
+                        <h1 class="subtext1">Design tips, tricks, and freebies. Delivered weekly.</h1>
+                        <h6 class="subtext2">Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                    </div>
                 </div>
             </div>
         </section>
