--- a/agnecy.html
+++ b/agnecy.html
@@ -123,6 +123,12 @@
                         <h6 class="subtext2">Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
                     </div>
                 </div>
+                <div class="sub">
+                    <div class="col-1">
+                        <input class="subinp">
+                        <a href="#" class="button1">SUBSCRIBE</a>
+                    </div>
+                </div>
             </div>
         </section>
         <section class="contacts">
