--- a/agnecy.html
+++ b/agnecy.html
@@ -118,15 +118,19 @@
         <section class="subscribe">
             <div class="container">
                 <div class="subtop">
-                    <div class="col-1">
-                        <h1 class="subtext1">Design tips, tricks, and freebies. Delivered weekly.</h1>
-                        <h6 class="subtext2">Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                    <div class="container">
+                        <div class="col-1">
+                            <h1 class="subtext1">Design tips, tricks, and freebies. Delivered weekly.</h1>
+                            <h6 class="subtext2">Lorem ipsum dolor sit amet, consectetur adipis cing elit, set do eius-mod tempor incididunt ut labore et.</h6>
+                        </div>
                     </div>
                 </div>
                 <div class="sub">
-                    <div class="col-1">
-                        <input class="subinp">
-                        <a href="#" class="button1">SUBSCRIBE</a>
+                    <div class="container">
+                        <div class="col-1">
+                            <input class="subinp">
+                            <a href="#" class="button1">SUBSCRIBE</a>
+                        </div>
                     </div>
                 </div>
             </div>
