--- a/agnecy.html
+++ b/agnecy.html
@@ -59,6 +59,32 @@
                 </div>
             </div>
         </section>
+        <section class="tabl">
+            <div class="container">
+                <div class="col-1">
+                    <table>
+                      <tr>
+                        <td>№ Рейса</td>
+                        <td>Откуда-куда</td>
+                        <td>Время вылета</td>
+                        <td>Время прилета</td>
+                      </tr>
+                      <tr>
+                        <td>1635</td>
+                        <td>VKO - MOON</td>
+                        <td>00:45</td>
+                        <td>23:15</td>
+                      </tr>
+                      <tr>
+                        <td>70200</td>
+                        <td>LED - MOON</td>
+                        <td>17:30</td>
+                        <td>16:20</td>
+                      </tr>
+                    </table>
+                </div>
+            </div>
+        </section>
         <section class="products">
             <div class="container column">
                 <div class="prodtop">
