--- a/agnecy.html
+++ b/agnecy.html
@@ -64,10 +64,10 @@
                 <div class="col-1">
                     <table>
                       <tr>
-                        <td>№ Рейса</td>
-                        <td>Откуда-куда</td>
-                        <td>Время вылета</td>
-                        <td>Время прилета</td>
+                        <th>№ Рейса</th>
+                        <th>Откуда-куда</th>
+                        <th>Время вылета</th>
+                        <th>Время прилета</th>
                       </tr>
                       <tr>
                         <td>1635</td>
