--- a/agnecy.html
+++ b/agnecy.html
@@ -62,7 +62,7 @@
         <section class="tabl">
             <div class="container">
                 <div class="col-1">
-                    <table cellpadding="3">
+                    <table>
                       <tr>
                         <th>№ Рейса</th>
                         <th>Откуда-куда</th>
