--- a/agnecy.html
+++ b/agnecy.html
@@ -62,9 +62,9 @@
         <section class="texttabl">
             <div class="container">
                 <div class="col-1 texttabl1">
-                    <h2>Расписание полетов></h2>
+                    <h2>Расписание полетов</h2>
                 </div>
-                <div class="col-1">
+                <div class="col-1 texttablcol">
                     <h6>Для вашего удобства мы разместили график полетов с вылетами из Москвы и Санкт-Петербурга. Вы также можете запросить <a href="#" class="texttabl2">индивидуальный полет</a>.</h6>
                 </div>
             </div>
